--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.3.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
+    "react-image-lightbox": "^5.1.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-svg": "^15.0.0",
