--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-image-lightbox": "^5.1.4",
+    "react-images": "^1.2.0-beta.7",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-svg": "^15.0.0",
