--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.2.0",
     "aos": "^2.3.4",
-    "autoprefixer": "10.4.7",
+    "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "react": "^18.1.0",
@@ -27,10 +27,7 @@
     "react-svg": "^15.0.0",
     "styled-components": "^5.3.5",
     "svg-icon": "^0.8.2",
-    "web-vitals": "^2.1.4",
-    "resolutions": {
-      "autoprefixer": "10.4.5"
-  }
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
