--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^14.2.0",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.5",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "5.2.0-beta1",
     "emailjs-com": "^3.2.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
